# launcher-mc

./: .gitignore  README.md  build-frontend.cjs  package-lock.json  package.json  test-both.mjs  test-logic.mjs  test-out.mjs  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: base-url.toml  detect-launcher.toml  detect-mods-dir.toml  download-mod.toml  ensure-fabric.toml  ensure-forge.toml  install-game.toml  launch-minecraft.toml  list-local-mods.toml  open-minecraft-folder.toml  play-game.toml  save-mod.toml  server-mods.toml  server-status.toml
src-tauri/resources/: README.md
src-tauri/resources/jre/mac/Contents/: Info.plist
src-tauri/resources/jre/mac/Contents/Home/: release
src-tauri/resources/jre/mac/Contents/Home/lib/: jspawnhelper  libawt.dylib  libawt_lwawt.dylib  libdt_socket.dylib  libextnet.dylib  libfontmanager.dylib  libfreetype.dylib  libinstrument.dylib  libj2gss.dylib  libj2pcsc.dylib  libj2pkcs11.dylib  libjaas.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjdwp.dylib  libjimage.dylib  libjli.dylib  libjsig.dylib  libjsound.dylib  liblcms.dylib  libmanagement.dylib  (+16 more)
src-tauri/resources/jre/mac/Contents/MacOS/: libjli.dylib
src-tauri/resources/jre/mac/Contents/_CodeSignature/: CodeResources
src-tauri/resources/prism/mac/Prism Launcher.app/Contents/: CodeResources  Info.plist
src-tauri/resources/prism/win/: manifest.txt  portable.txt  qtlogging.ini
src-tauri/src/: commands.rs  dedicated.rs  download.rs  lib.rs  main.rs
(+58 files in other folders)
