[package]
name = "launcher-mac-silicon"
version = "1.0.0"
description = "Launcher macOS Silicon para mods do servidor"
authors = ["painel-mc"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "launcher_mc"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "default-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
